[metadata]
name = url_parser
version = 1.0.0
author = letsdata
author_email = stop.fake.news.letsdata@gmail.com
description = URL parser/extractor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LetsData-net/url-parser

[options]
packages = find:
python_requires = >=3.8.12
install_requires =
    requests==2.28.2
    urlextract==1.8.0
include_package_data = True
